--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -11,17 +11,6 @@
     tools:context="com.example.byonge.a1117.control">
 
     <Button
-        android:text="ON"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="80dp"
-        android:layout_marginStart="80dp"
-        android:id="@+id/button4"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
         android:text="OFF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,4 +42,14 @@
         android:layout_alignTop="@+id/textView"
         android:layout_alignRight="@+id/button6"
         android:layout_alignEnd="@+id/button6" />
+
+    <Button
+        android:text="ON"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button4"
+        android:layout_below="@+id/spinner"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginTop="27dp" />
 </RelativeLayout>
