--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
         android:id="@+id/button"
-        android:layout_width="150dp" />
+        android:layout_width="150dp"
+        android:onClick="monitoring" />
 
     <Button
         android:text="CONTROL"
@@ -26,7 +27,8 @@
         android:id="@+id/button2"
         android:layout_below="@+id/button"
         android:layout_alignLeft="@+id/button"
-        android:layout_alignStart="@+id/button" />
+        android:layout_alignStart="@+id/button"
+        android:onClick="control" />
 
     <Button
         android:text="REPORT"
@@ -34,5 +36,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/button3"
         android:layout_below="@+id/button2"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="report" />
 </RelativeLayout>
